src/test/ui/rfc-2005-default-binding-mode/no-double-error.stderr
error[E0599]: no associated item named `XXX` found for type `u32` in the current scope
  --> $DIR/no-double-error.rs:8:14
   |
LL |         u32::XXX => { }
   |              ^^^ associated item not found in `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
